# essay_evaluator

./: README.md  evaluator_frontend.py  main.py  pyproject.toml
